# roz-workshop

./: .gitignore  CLAUDE.md  LICENSE  README.md  TASKS.md  west.yml
common/: README.md
docs/: contributing-resources.md  pre-workshop-setup.md
ex01-explore/: README.md
ex02-rust-analyzer/: README.md  sample.yaml
ex03-threads/: CMakeLists.txt  Cargo.toml  README.md
ex03-threads/solution/: CMakeLists.txt  Cargo.toml  prj.conf
ex03-threads/solution/src/: lib.rs
ex03-threads/src/: lib.rs
ex04-async/: CMakeLists.txt  Cargo.toml  README.md  prj.conf
ex04-async/solution/: CMakeLists.txt  Cargo.toml
ex04-async/solution/src/: lib.rs
ex04-async/src/: lib.rs
ex05-i2c/: CMakeLists.txt  Cargo.toml  README.md  prj.conf
ex05-i2c/boards/: nrf52840dk_nrf52840.overlay
ex05-i2c/src/: better_way.rs  hard_way.rs  lib.rs
