# Copyright (c) 2026 Linaro, LTD
# SPDX-License-Identifier: Apache-2.0

[package]
# This must be rustapp for now.
name = "rustapp"
version = "0.1.0"
edition = "2021"
description = "Embassy async rewrite of the ex03 producer/consumer"
license = "Apache-2.0 OR MIT"

[lib]
crate-type = ["staticlib"]

[dependencies]
zephyr = { version = "0.1.0", features = ["time-driver", "executor-zephyr"] }
log = "0.4.22"
static_cell = "2.1"
embassy-executor = { version = "0.7.0", features = ["log", "task-arena-size-2048"] }
embassy-sync = "0.6.2"
embassy-time = "0.4.0"
embassy-futures = "0.1.1"
